--- a/bag/src/bag.conf
+++ b/bag/src/bag.conf
@@ -15,11 +15,11 @@
 
 [DEFAULT]
 
-database = pdok
-schema = bag
+database = bag
+schema = public
 host     = localhost
-user     = pdok_owner
-password = pdok_owner
+user     = postgres
+password = postgres
 port = 5432
 
 
