Afhandeling multiattributen TOP10NL verbeterd

--- a/top10nl/bin/top10-settings.ini
+++ b/top10nl/bin/top10-settings.ini
@@ -14,16 +14,6 @@ PG_PASSWORD: top10nl
 [OGROptions]
 # Opties voor OGR
 
-# Wat te doen met meervoudig-voorkomende elementen als "nwegnummer"
-# 3 mogelijkheden:
-# 1) niets doen: wordt char[] array in postgres (OGR_OPT_MULTIATTR leeg) (hier kan bijv GeoServer niet mee omgaan!)
-# 2) lijst in 1 enkele string  (-fieldTypeToString StringList)
-# 3) meerdere kolommen met ieder 1 waarde bijv. typeweg1, typeweg2 etc. (-splitlistfields) (kost aanzienlijk meer processing tijd)
-OGR_OPT_MULTIATTR: -fieldTypeToString StringList
-# OGR_OPT_MULTIATTR: -splitlistfields
-# OGR_OPT_MULTIATTR: -splitlistfields -maxsubfields 1
-# OGR_OPT_MULTIATTR: 
-
 # Bron SRS, altijd NL RD epsg:28992
 OGR_SSRS: epsg:28992
 
@@ -35,7 +25,7 @@ OGR_TSRS:
 
 # In theorie kunnen we ook naar andere formaten converteren, bijv. ESRI Shape
 OGR_OUT_FORMAT: PostgreSQL
-#OGR_OUT_OPTIONS: PG:dbname=%(PG_DB)s host=%(PG_HOST)s port=%(PG_PORT)s user=%(PG_USER)s password=%(PG_PASSWORD)s
+#OGR_OUT_OPTIONS: PG:dbname=%(PG_DB) host=%(PG_HOST) port=%(PG_PORT) user=%(PG_USER) password=%(PG_PASSWORD)
 # Interpolation niet ondersteund door SafeConfigParser, omdat de PG-opties in een andere sectie zitten
 
 # PostgreSQL Layer Creation (-lco) opties
@@ -49,6 +39,6 @@ OGR_OVERWRITE_OR_APPEND: -append
 OGR_GT: -gt 65536
 
 # In onderzoek...dit zou de mogelijkheid moeten geven geometrie uit te splitsen zodat we
-# de XSLT niet nodig zouden hebben. Werkt in ieder geval niet in GDAL 1.8.1s
+# de XSLT niet nodig zouden hebben. Werkt in ieder geval niet in GDAL 1.8.1
 # OGR_SQL: "-sql "select * from waterdeel where OGR_GEOMETRY = 'LINESTRING'" -dialect OGRSQL"
 
