Ondersteuning voor alternatieve schema's voor TOP10NL toegevoegd

--- a/top10nl/bin/top10-settings.ini
+++ b/top10nl/bin/top10-settings.ini
@@ -9,6 +9,7 @@ PG_DB: top10nl
 PG_PORT: 5432
 PG_USER: top10nl
 PG_PASSWORD: top10nl
+PG_SCHEMA: top10_xxx
 # (niet gebruikt) PG_CLIENTENCODING: UTF-8
 
 [OGROptions]
