Uitschakelen pg_schema in ini/gebruik betere defaultnaam

--- a/top10nl/bin/top10-settings.ini
+++ b/top10nl/bin/top10-settings.ini
@@ -5,11 +5,11 @@
 [PostGIS]
 # PostgreSQL / PostGIS connectiesettings
 PG_HOST: localhost
-PG_DB: top10nl
 PG_PORT: 5432
+PG_DB: top10nl
+# (default: public) PG_SCHEMA: top10
 PG_USER: top10nl
 PG_PASSWORD: top10nl
-PG_SCHEMA: top10_xxx
 # (niet gebruikt) PG_CLIENTENCODING: UTF-8
 
 [OGROptions]
