documentatie install onder Windows met Portable GIS

--- a/top10nl/bin/top10-settings.ini
+++ b/top10nl/bin/top10-settings.ini
@@ -4,7 +4,7 @@
 
 [PostGIS]
 # PostgreSQL / PostGIS connectiesettings
-PG_HOST: localhost
+PG_HOST: 127.0.0.1
 PG_PORT: 5432
 PG_DB: top10nl
 # (default: public) PG_SCHEMA: top10
