issue #134 - top10nl via Stetl verfijning

--- a/top10nl/etl/etl-top10nl.cfg
+++ b/top10nl/etl/etl-top10nl.cfg
@@ -75,7 +75,7 @@ container_doc = <?xml version="1.0" encoding="UTF-8"?>
     </gml:FeatureCollection >
 element_container_tag = FeatureCollection
 
-# Transforms into simple feature data (single geometry, single attrs)
+# Transforms into simple/flat feature data (single geometry per feature type, single attrs)
 [transformer_xslt]
 class = filters.xsltfilter.XsltFilter
 script = xsl/top10-split_v1.1.1.xsl
