TOP10extract: eerste versie ondersteuning schema versie 1.2

--- a/top10nl/etl/conf/etl-top10nl-v1.2.cfg
+++ b/top10nl/etl/conf/etl-top10nl-v1.2.cfg
@@ -30,12 +30,12 @@ chains = input_sql_pre|schema_name_filter|output_postgres,
 # Pre SQL file inputs to be executed
 [input_sql_pre]
 class = inputs.fileinput.StringFileInput
-file_path = sql/drop-tables.sql,sql/create-schema.sql
+file_path = sql/drop-tables-v1.2.sql,sql/create-schema.sql
 
 # Post SQL file inputs to be executed
 [input_sql_post]
 class = inputs.fileinput.StringFileInput
-file_path = sql/delete-duplicates.sql
+file_path = sql/delete-duplicates-v1.2.sql
 
 # Generic filter to substitute Python-format string values like {schema} in string
 [schema_name_filter]
@@ -48,37 +48,34 @@ class = outputs.dboutput.PostgresDbOutput
 database = {database}
 host = {host}
 port = {port}
-user     = {user}
+user = {user}
 password = {password}
 schema = {schema}
 
-# The source input file(s) from dir and produce gml:featureMember elements
+# The source input file(s) from dir and produce top10nl:FeatureMember elements
 [input_big_gml_files]
 class = inputs.fileinput.XmlElementStreamerFileInput
 file_path = {gml_files}
-element_tags = featureMember
+element_tags = FeatureMember
 
 # Assembles etree docs gml:featureMember elements, each with "max_elements" elements
 [xml_assembler]
 class = filters.xmlassembler.XmlAssembler
 max_elements = {max_features}
 container_doc = <?xml version="1.0" encoding="UTF-8"?>
-   <gml:FeatureCollection
+   <gml:FeatureCollectionT10NL
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xmlns:xs="http://www.w3.org/2001/XMLSchema"
-    xmlns:top10nl="http://www.kadaster.nl/schemas/top10nl/v20120116"
-    xmlns:gml="http://www.opengis.net/gml"
-    xmlns:xlink="http://www.w3.org/1999/xlink"
-    xmlns:smil20="http://www.w3.org/2001/SMIL20/"
-    xmlns:smil20lang="http://www.w3.org/2001/SMIL20/Language"
-    xsi:schemaLocation="http://www.kadaster.nl/schemas/top10nl/v20120116 http://www.kadaster.nl/schemas/top10nl/v20120116/TOP10NL_1_1_1.xsd">
-    </gml:FeatureCollection >
-element_container_tag = FeatureCollection
+    xmlns:top10nl="http://www.kadaster.nl/schemas/imbrt/top10nl/1.2"
+    xmlns:brt="http://www.kadaster.nl/schemas/imbrt/brt-alg/1.0"
+    xmlns:gml="http://www.opengis.net/gml/3.2"
+    xsi:schemaLocation="http://www.kadaster.nl/schemas/imbrt/top10nl/1.2 http://www.kadaster.nl/schemas/top10nl/vyyyymmdd/TOP10NL_1_2.xsd">
+    </gml:FeatureCollectionT10NL >
+element_container_tag = FeatureCollectionT10NL
 
 # Transforms into simple/flat feature data (single geometry per feature type, single attrs)
 [transformer_xslt]
 class = filters.xsltfilter.XsltFilter
-script = xsl/top10-split_v1.1.1.xsl
+script = xsl/top10-split_v1.2.xsl
 
 # The ogr2ogr command-line, may use any output here, as long as
 # the input is a GML file. The "temp_file" is where etree-docs
@@ -87,7 +84,7 @@ script = xsl/top10-split_v1.1.1.xsl
 [output_ogr2ogr]
 class = outputs.ogroutput.Ogr2OgrOutput
 temp_file = {temp_dir}/top10-tmp.gml
-gfs_file = top10-v1.1.1.gfs
+gfs_file = gfs/top10-v1.2.gfs
 # lco will only be added to ogr2ogr on first run
 lco = -lco LAUNDER=YES -lco PRECISION=NO
 # spatial_extent, tra
@@ -108,8 +105,8 @@ ogr2ogr_cmd = ogr2ogr
 # Validator for XML
 [xml_schema_validator]
 class = filters.xmlvalidator.XmlSchemaValidator
-xsd = http://www.kadaster.nl/schemas/top10nl/v20120116/TOP10NL_1_1_1.xsd
-enabled = True
+xsd = http://www.kadaster.nl/schemas/top10nl/vyyyymmdd/TOP10NL_1_2.xsd
+enabled = False
 
 # Below Alternative outputs for testing
 
