--- a/top10nl/etl/conf/etl-top10nl-v1.2.cfg
+++ b/top10nl/etl/conf/etl-top10nl-v1.2.cfg
@@ -35,7 +35,7 @@ file_path = sql/drop-tables-v1.2.sql,sql/create-schema.sql
 # Post SQL file inputs to be executed
 [input_sql_post]
 class = inputs.fileinput.StringFileInput
-file_path = sql/delete-duplicates-v1.2.sql
+file_path = sql/delete-duplicates-v1.2.sql,sql/update-multiattributes-v1.2.sql
 
 # Generic filter to substitute Python-format string values like {schema} in string
 [schema_name_filter]
