Gfs_template optie toegepast in etl-brk.cfg

--- a/brk/etl/conf/etl-brk.cfg
+++ b/brk/etl/conf/etl-brk.cfg
@@ -62,10 +62,12 @@ dest_format = PostgreSQL
 dest_data_source = "PG:dbname={database} host={host} port={port} user={user} password={password} active_schema={schema}"
 # layer creation options will only be added to ogr2ogr on first run
 lco = -lco LAUNDER=YES -lco PRECISION=NO
-# miscellaneous ogr2ogr options
-options = -append -gt 65536 {multi_opts} --config PG_USE_COPY YES --config GML_GFS_TEMPLATE gfs/brk.gfs --config CPL_ZIP_ENCODING CP437
 # spatial_extent, translates to -spat xmin ymin xmax ymax
 spatial_extent = {spatial_extent}
+# gfs template
+gfs_template = gfs/brk.gfs
+# miscellaneous ogr2ogr options
+options = -append -gt 65536 {multi_opts} --config PG_USE_COPY YES --config CPL_ZIP_ENCODING CP437
 	
 # Below alternative outputs are meant for testing
 
