--- a/top10nl/etl/conf/etl-top10nl-v1.2-dev.cfg
+++ b/top10nl/etl/conf/etl-top10nl-v1.2-dev.cfg
@@ -6,11 +6,13 @@
 # Currently 3 chains are executed in the following order:
 # - SQL pre:  DB initialization, delete tables, create schema
 # - Main ETL chain, consists of the following components
-# 1. input_big_gml_files: read input file(s)and output feature elements
-# 2. xml_assembler: assemble feature elements into smaller (etree) docs
-# 3. xml_schema_validator: validation against top10nl XSD of (etree) doc [OPTIONAL]
-# 4. transformer_xslt: transform each (etree) doc
-# 5. output_ogr2ogr: output using ogr2ogr, input are a GML etree docs, output can be any OGR output
+# 1. input_zip_file: reads files from input ZIP file(s)
+# 2. extract_zip_file: extracts a GML file from a ZIP file
+# 3. parse_gml_file: parses elements from a GML file
+# 4. xml_assembler: assemble feature elements into smaller (etree) docs
+# 5. transformer_xslt: transform each (etree) doc
+# 6. packet_writer: writes the transformed GML document to a file
+# 7. output_ogr2ogr: output using ogr2ogr, input is a transformed GML file, output can be any OGR output
 # - SQL post:  remove duplicates
 #
 # Any substitutable values are specified in curly brackets e.g. {password}.
@@ -19,7 +21,7 @@
 
 [etl]
 chains = input_sql_pre|schema_name_filter|output_postgres,
-         input_big_gml_files|xml_assembler|transformer_xslt|output_ogr2ogr,
+         input_zip_file|extract_zip_file|parse_gml_file|xml_assembler|transformer_xslt|packet_writer|output_ogr2ogr,
          input_sql_post|schema_name_filter|output_postgres
 
 # alternative chains for testing
@@ -52,10 +54,25 @@ user = {user}
 password = {password}
 schema = {schema}
 
-# The source input file(s) from dir and produce top10nl:FeatureMember elements
-[input_big_gml_files]
-class = inputs.fileinput.XmlElementStreamerFileInput
+# The source input ZIP-file(s) from dir, producing 'records' with ZIP file name and inner file names
+[input_zip_file]
+class=inputs.fileinput.ZipFileInput
 file_path = {gml_files}
+filename_pattern = *.[zZ][iI][pP]
+
+# Filter to generate the vsizip-names
+[vsizip_filter]
+class=filters.templatingfilter.StringTemplatingFilter
+template_string = /vsizip/$file_path/$name
+
+# Filter to extract a ZIP file one by one to a temporary location
+[extract_zip_file]
+class=filters.zipfileextractor.ZipFileExtractor
+file_path = {temp_dir}/fromzip-tmp.gml
+
+# The source input file producing cityObjectMember elements
+[parse_gml_file]
+class = filters.xmlelementreader.XmlElementReader
 element_tags = FeatureMember
 
 # Assembles etree docs gml:featureMember elements, each with "max_elements" elements
@@ -77,30 +94,31 @@ element_container_tag = FeatureCollectionT10NL
 class = filters.xsltfilter.XsltFilter
 script = xsl/top10-split_v1.2.xsl
 
+# Writes the payload of a packet as a string to a file
+[packet_writer]
+class = filters.packetwriter.PacketWriter
+file_path = {temp_dir}/top10-tmp.gml
+
 # The ogr2ogr command-line, may use any output here, as long as
 # the input is a GML file. The "temp_file" is where etree-docs
 # are saved. It has to be the same file as in the ogr2ogr command.
 # TODO: find a way to use a GML-stream through stdin to ogr2ogr
 [output_ogr2ogr]
-class = outputs.ogroutput.Ogr2OgrOutput
-temp_file = {temp_dir}/top10-tmp.gml
-gfs_file = gfs/top10-v1.2.gfs
-# lco will only be added to ogr2ogr on first run
+class = outputs.execoutput.Ogr2OgrExecOutput
+# destination format: OGR vector format name
+dest_format = PostgreSQL
+# destination datasource: name of datasource
+dest_data_source = "PG:dbname={database} host={host} port={port} user={user} password={password} active_schema={schema}"
+# layer creation options will only be added to ogr2ogr on first run
 lco = -lco LAUNDER=YES -lco PRECISION=NO
-# spatial_extent, tra
-# translates to -spat xmin ymin xmax ymax
+# spatial_extent, translates to -spat xmin ymin xmax ymax
 spatial_extent = {spatial_extent}
-ogr2ogr_cmd = ogr2ogr
-    -append 
-    -f PostgreSQL 
-   "PG:dbname={database} host={host} port={port} user={user} password={password} active_schema={schema}" 
-   -gt 65536 
-   -a_srs epsg:28992  
-   -s_srs epsg:28992
-   {temp_dir}/top10-tmp.gml
-   {multi_opts}
-	--config PG_USE_COPY YES
-
+# gfs template
+gfs_template = gfs/top10-v1.2.gfs
+# miscellaneous ogr2ogr options
+options = -append -gt 65536 {multi_opts} --config PG_USE_COPY YES
+# cleanup input?
+cleanup_input = True
 
 # Validator for XML
 [xml_schema_validator]
