Name_filter property toegevoegd aan ZipFileInput in Top10-extract

--- a/top10nl/etl/conf/etl-top10nl-v1.2-dev.cfg
+++ b/top10nl/etl/conf/etl-top10nl-v1.2-dev.cfg
@@ -59,6 +59,7 @@ schema = {schema}
 class=inputs.fileinput.ZipFileInput
 file_path = {gml_files}
 filename_pattern = *.[zZ][iI][pP]
+name_filter=.*\.[gG][mM][lL]
 
 # Filter to generate the vsizip-names
 [vsizip_filter]
