BRK: vsizip-filter vervangen door extract_zip_file-filter i.v.m. het niet kunnen wegschrijven van een GFS-file

--- a/brk/etl/conf/etl-brk.cfg
+++ b/brk/etl/conf/etl-brk.cfg
@@ -15,10 +15,10 @@
 
 [etl]
 chains = input_sql_pre|schema_name_filter|output_postgres,
-         input_zip_file|vsizip_filter|output_ogr2ogr
+         input_zip_file|extract_zip_file|output_ogr2ogr
 
 # Alternative chains for testing
-#chains = input_zip_file|vsizip_filter|output_std
+#chains = input_zip_file|extract_zip_file|output_std
 
 # Pre SQL file inputs to be executed
 [input_sql_pre]
@@ -46,10 +46,10 @@ class=inputs.fileinput.ZipFileInput
 file_path = {gml_files}
 filename_pattern = *.[zZ][iI][pP]
 
-# Filter to generate the vsizip-names
-[vsizip_filter]
-class=filters.templatingfilter.StringTemplatingFilter
-template_string = /vsizip/$file_path/$name
+# Filter to extract a ZIP file one by one to a temporary location
+[extract_zip_file]
+class=filters.zipfileextractor.ZipFileExtractor
+file_path = {temp_dir}/fromzip-tmp.gml
 
 # The ogr2ogr command-line, may use any output here, as long as
 # the input is a GML file.
