Set optie PG_USE_COPY naar NO, i.v.m. issue met GDAL 2.0

--- a/brk/etl/conf/etl-brk.cfg
+++ b/brk/etl/conf/etl-brk.cfg
@@ -67,7 +67,7 @@ spatial_extent = {spatial_extent}
 # gfs template
 gfs_template = gfs/brk.gfs
 # miscellaneous ogr2ogr options
-options = -append -gt 65536 {multi_opts} --config PG_USE_COPY YES --config CPL_ZIP_ENCODING CP437
+options = -append -gt 65536 {multi_opts} --config PG_USE_COPY NO --config CPL_ZIP_ENCODING CP437
 	
 # Below alternative outputs are meant for testing
 
