--- a/top10nl/etl/conf/etl-top10nl-v1.2.cfg
+++ b/top10nl/etl/conf/etl-top10nl-v1.2.cfg
@@ -107,7 +107,7 @@ spatial_extent = {spatial_extent}
 # gfs template
 gfs_template = gfs/top10-v1.2.gfs
 # miscellaneous ogr2ogr options
-options = -append -gt 65536 {multi_opts} --config PG_USE_COPY YES
+options = -append -gt 65536 {multi_opts} --config PG_USE_COPY NO
 # cleanup input?
 cleanup_input = True
 
