--- a/bgt/etl/conf/etl-imgeo-v2.1.1.cfg
+++ b/bgt/etl/conf/etl-imgeo-v2.1.1.cfg
@@ -124,7 +124,7 @@ spatial_extent = {spatial_extent}
 # gfs template
 gfs_template = gfs/imgeo-v2.1.1.gfs
 # miscellaneous ogr2ogr options
-options = -append -gt 65536 {multi_opts} --config PG_USE_COPY YES
+options = -append -gt 65536 {multi_opts} --config PG_USE_COPY NO
 # cleanup input?
 cleanup_input = True
 
