#166 versimpel opties met -a .args files

--- a/brk/etl/conf/etl-brk.cfg
+++ b/brk/etl/conf/etl-brk.cfg
@@ -44,7 +44,7 @@ schema = {schema}
 [input_zip_file]
 class=inputs.fileinput.ZipFileInput
 file_path = {gml_files}
-filename_pattern = *.[zZ][iI][pP]
+filename_pattern = {gml_files_pattern}
 
 # Filter to extract a ZIP file one by one to a temporary location
 [extract_zip_file]
@@ -65,7 +65,7 @@ lco = -lco LAUNDER=YES -lco PRECISION=NO
 # spatial_extent, translates to -spat xmin ymin xmax ymax
 spatial_extent = {spatial_extent}
 # gfs template
-gfs_template = gfs/brk.gfs
+gfs_template = {gfs_template}
 # miscellaneous ogr2ogr options
 options = -append -gt 65536 {multi_opts} --config PG_USE_COPY NO --config CPL_ZIP_ENCODING CP437
 	
