issue #166 : integreer exclude pattern voor .zip files

--- a/brk/etl/conf/etl-brk.cfg
+++ b/brk/etl/conf/etl-brk.cfg
@@ -1,14 +1,14 @@
-# Example of process-chains for extracting BRK source data from zipped GML to PostGIS.
+# Example of process-chains for extracting BRK source data from zipped GML archives to PostGIS.
 # A Chain is a series of Components: one Input, zero or more Filters and one Output.
 # The output of a Component is connected to the input of the next Component (except for
 # the final Output Component, which writes to the final destination, e.g. Postgres.
 #
-# Currently 3 chains are executed in the following order:
-# - SQL pre:  DB initialization, delete tables, create schema
-# - Main ETL chain, consists of the following components
-# 1. input_zip_file: read input ZIP files and output records with names of files found in ZIP
-# 2. vsizip_filter: translates ZIP file names to a vsizip-name, meant for ogr2ogr
-# 3. output_ogr2ogr: output using ogr2ogr, input are viszip-names, output can be any OGR output
+# Currently 2 chains are executed in the following order:
+# 1 - SQL pre:  DB initialization, delete tables, create schema
+# 2 - Main ETL chain, consists of the following components
+# a. input_zip_file: read input ZIP files and output records with names of files found in ZIP
+# b. extract_zip_file: extract one file from a zip into a temp dir
+# c. output_ogr2ogr: output using ogr2ogr, input is the GML file (step 2), output can be any OGR output
 #
 # Any substitutable values are specified in curly brackets e.g. {password}.
 # Actual values can be passed as args to Stetl main.py or as arguments from a wrapper program.
@@ -43,8 +43,9 @@ schema = {schema}
 # The source input ZIP-file(s) from dir, producing 'records' with ZIP file name and inner file names
 [input_zip_file]
 class=inputs.fileinput.ZipFileInput
-file_path = {gml_files}
-filename_pattern = {gml_files_pattern}
+file_path = {input_dir}
+filename_pattern = {zip_files_pattern}
+name_filter = {filename_match}
 
 # Filter to extract a ZIP file one by one to a temporary location
 [extract_zip_file]
