BGT-extract geschikt gemaakt voor werkwijze met args-bestanden; tevens voorzien van testdata

--- a/bgt/etl/conf/etl-imgeo-v2.1.1.cfg
+++ b/bgt/etl/conf/etl-imgeo-v2.1.1.cfg
@@ -57,7 +57,7 @@ schema = {schema}
 # The source input ZIP-file(s) from dir, producing 'records' with ZIP file name and inner file names
 [input_zip_file]
 class=inputs.fileinput.ZipFileInput
-file_path = {gml_files}
+file_path = {input_dir}
 filename_pattern = *.[zZ][iI][pP]
 
 # Filter to generate the vsizip-names
