Top10-extract geschikt gemaakt voor werkwijze met args-bestanden

--- a/top10nl/etl/conf/etl-top10nl-v1.2.cfg
+++ b/top10nl/etl/conf/etl-top10nl-v1.2.cfg
@@ -52,9 +52,9 @@ schema = {schema}
 # The source input ZIP-file(s) from dir, producing 'records' with ZIP file name and inner file names
 [input_zip_file]
 class=inputs.fileinput.ZipFileInput
-file_path = {gml_files}
+file_path = {input_dir}
 filename_pattern = *.[zZ][iI][pP]
-name_filter=.*\.[gG][mM][lL]
+name_filter=*.[gG][mM][lL]
 
 # Filter to extract a ZIP file one by one to a temporary location
 [extract_zip_file]
