Wijzigingen van WouterVisscher/docker-bag verwerkt

--- a/docker/bag/Dockerfile
+++ b/docker/bag/Dockerfile
@@ -20,24 +20,27 @@ ENV C_INCLUDE_PATH /usr/include/gdal
 # Install nginx
 RUN apt-get install -y nginx-full
 
+#Add configuration files
+ADD config/ /config/
+
 # Add BAG-extract, using Git
-COPY get-bagextract.sh /
-RUN /get-bagextract.sh
+RUN chmod +x /config/get-bagextract.sh
+RUN /config/get-bagextract.sh
 
 # Install Python dependencies and BAG-extract webservices
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 
-COPY requirements.txt /usr/src/app/
-RUN pip install --no-cache-dir -r requirements.txt
+RUN chmod +x /config/pip-install.sh
+RUN /config/pip-install.sh
 
 ADD app/ /usr/src/app/
 
 # Copy BAG-extract configuration
-COPY extract.conf /opt/nlextract/bag/extract.conf
+RUN cp /config/extract.conf /opt/nlextract/bag/extract.conf
 
 # Replace nginx configuration
-COPY nginx.conf /etc/nginx/nginx.conf
+RUN cp /config/nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE 80
 
@@ -47,7 +50,8 @@ VOLUME /data
 # Start all processes
 COPY init.sh /
 USER root
+RUN chmod +x /init.sh
 CMD ["/init.sh"]
-  
+
 # BAG database opnieuw initialiseren: python /opt/nlextract/bag/src/bagextract.py -cj
 # BAG data laden: python /opt/nlextract/bag/src/bagextract.py -e <pad_naar_bestand>
