Add delete duplicate script to BRK

--- a/brk/etl/conf/etl-brk.cfg
+++ b/brk/etl/conf/etl-brk.cfg
@@ -15,7 +15,8 @@
 
 [etl]
 chains = input_sql_pre|schema_name_filter|output_postgres,
-         input_zip_file|extract_zip_file|output_ogr2ogr
+         input_zip_file|extract_zip_file|output_ogr2ogr,
+         input_sql_post|schema_name_filter|output_postgres
 
 # Alternative chains for testing
 #chains = input_zip_file|extract_zip_file|output_std
@@ -24,6 +25,11 @@ chains = input_sql_pre|schema_name_filter|output_postgres,
 [input_sql_pre]
 class = inputs.fileinput.StringFileInput
 file_path = sql/drop-tables.sql,sql/create-schema.sql
+
+# Post SQL file inputs to be executed
+[input_sql_post]
+class = inputs.fileinput.StringFileInput
+file_path = sql/delete-duplicates.sql
 
 # Generic filter to substitute Python-format string values like {schema} in string
 [schema_name_filter]
