Various improvements to Top10Extract, so XSLT transformation can be omitted

--- a/top10nl/etl/conf/etl-top10nl-v1.2.cfg
+++ b/top10nl/etl/conf/etl-top10nl-v1.2.cfg
@@ -21,7 +21,7 @@
 
 [etl]
 chains = input_sql_pre|schema_name_filter|output_postgres,
-         input_zip_file|extract_zip_file|parse_gml_file|xml_assembler|transformer_xslt|packet_writer|output_ogr2ogr,
+         input_zip_file|extract_zip_file|output_ogr2ogr,
          input_sql_post|schema_name_filter|output_postgres
 
 # Pre SQL file inputs to be executed
@@ -32,7 +32,7 @@ file_path = sql/drop-tables-v1.2.sql,sql/create-schema.sql
 # Post SQL file inputs to be executed
 [input_sql_post]
 class = inputs.fileinput.StringFileInput
-file_path = sql/delete-duplicates-v1.2.sql,sql/update-multiattributes-v1.2.sql
+file_path = sql/update-multiattributes-v1.2.sql,sql/update-geoms-v1.2.sql
 
 # Generic filter to substitute Python-format string values like {schema} in string
 [schema_name_filter]
@@ -61,35 +61,6 @@ name_filter=*.[gG][mM][lL]
 class=filters.zipfileextractor.ZipFileExtractor
 file_path = {temp_dir}/fromzip-tmp.gml
 
-# The source input file producing cityObjectMember elements
-[parse_gml_file]
-class = filters.xmlelementreader.XmlElementReader
-element_tags = FeatureMember
-
-# Assembles etree docs gml:featureMember elements, each with "max_elements" elements
-[xml_assembler]
-class = filters.xmlassembler.XmlAssembler
-max_elements = {max_features}
-container_doc = <?xml version="1.0" encoding="UTF-8"?>
-   <gml:FeatureCollectionT10NL
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xmlns:top10nl="http://www.kadaster.nl/schemas/imbrt/top10nl/1.2"
-    xmlns:brt="http://www.kadaster.nl/schemas/imbrt/brt-alg/1.0"
-    xmlns:gml="http://www.opengis.net/gml/3.2"
-    xsi:schemaLocation="http://www.kadaster.nl/schemas/imbrt/top10nl/1.2 http://www.kadaster.nl/schemas/top10nl/vyyyymmdd/TOP10NL_1_2.xsd">
-    </gml:FeatureCollectionT10NL >
-element_container_tag = FeatureCollectionT10NL
-
-# Transforms into simple/flat feature data (single geometry per feature type, single attrs)
-[transformer_xslt]
-class = filters.xsltfilter.XsltFilter
-script = xsl/top10-split_v1.2.xsl
-
-# Writes the payload of a packet as a string to a file
-[packet_writer]
-class = filters.packetwriter.PacketWriter
-file_path = {temp_dir}/top10-tmp.gml
-
 # The ogr2ogr command-line, may use any output here, as long as
 # the input is a GML file. The "temp_file" is where etree-docs
 # are saved. It has to be the same file as in the ogr2ogr command.
@@ -107,7 +78,7 @@ spatial_extent = {spatial_extent}
 # gfs template
 gfs_template = gfs/top10-v1.2.gfs
 # miscellaneous ogr2ogr options
-options = -append -gt 65536 {multi_opts} --config PG_USE_COPY NO
+options = -append -gt 65536 {multi_opts}
 # cleanup input?
 cleanup_input = True
 
