Various improvements to BGTExtract: no XSLT and curves should be preserved

--- a/bgt/etl/conf/etl-imgeo-v2.1.1.cfg
+++ b/bgt/etl/conf/etl-imgeo-v2.1.1.cfg
@@ -8,11 +8,7 @@
 # - Main ETL chain, consists of the following components
 # 1. input_zip_file: reads files from input ZIP file(s)
 # 2. extract_zip_file: extracts a GML file from a ZIP file
-# 3. parse_gml_file: parses elements from a GML file
-# 4. xml_assembler: assemble feature elements into smaller (etree) docs
-# 5. transformer_xslt: transform each (etree) doc
-# 6. packet_writer: writes the transformed GML document to a file
-# 7. output_ogr2ogr: output using ogr2ogr, input is a transformed GML file, output can be any OGR output
+# 3. output_ogr2ogr: output using ogr2ogr, input is a transformed GML file, output can be any OGR output
 # - SQL post:  remove duplicates
 #
 # Any substitutable values are specified in curly brackets e.g. {password}.
@@ -21,7 +17,7 @@
 
 [etl]
 chains = input_sql_pre|schema_name_filter|output_postgres,
-         input_zip_file|extract_zip_file|parse_gml_file|xml_assembler|transformer_xslt|packet_writer|output_ogr2ogr,
+         input_zip_file|extract_zip_file|output_ogr2ogr,
          input_sql_post|schema_name_filter|output_postgres
 
 # alternative chains for testing
@@ -70,43 +66,6 @@ template_string = /vsizip/$file_path/$name
 class=filters.zipfileextractor.ZipFileExtractor
 file_path = {temp_dir}/fromzip-tmp.gml
 
-# The source input file producing cityObjectMember elements
-[parse_gml_file]
-class = filters.xmlelementreader.XmlElementReader
-element_tags = cityObjectMember
-
-# Assembles etree docs cityObjectMember elements, each with "max_elements" elements
-[xml_assembler]
-class = filters.xmlassembler.XmlAssembler
-max_elements = {max_features}
-container_doc = <?xml version="1.0" encoding="UTF-8"?>
-  <CityModel xmlns:gml="http://www.opengis.net/gml"
-    xmlns:imgeo="http://www.geostandaarden.nl/imgeo/2.1"
-    xmlns:lu="http://www.opengis.net/citygml/landuse/2.0"
-    xmlns:tra="http://www.opengis.net/citygml/transportation/2.0"
-    xmlns:tun="http://www.opengis.net/citygml/tunnel/2.0"
-    xmlns:veg="http://www.opengis.net/citygml/vegetation/2.0"
-    xmlns:xlink="http://www.w3.org/1999/xlink"
-    xmlns:wat="http://www.opengis.net/citygml/waterbody/2.0"
-    xmlns:bri="http://www.opengis.net/citygml/bridge/2.0"
-    xmlns:bui="http://www.opengis.net/citygml/building/2.0"
-    xmlns:cif="http://www.opengis.net/citygml/cityfurniture/2.0"
-    xmlns="http://www.opengis.net/citygml/2.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-    xsi:schemaLocation="http://www.geostandaarden.nl/imgeo/2.1 http://schemas.geonovum.nl/imgeo/2.1/imgeo-2.1.1.xsd">
-  </CityModel>
-element_container_tag = CityModel
-
-# Transforms into simple/flat feature data (single geometry per feature type, single attrs)
-[transformer_xslt]
-class = filters.xsltfilter.XsltFilter
-script = xsl/imgeo-split_v2.1.1.xsl
-
-# Writes the payload of a packet as a string to a file
-[packet_writer]
-class = filters.packetwriter.PacketWriter
-file_path = {temp_dir}/imgeo-tmp.gml
-
 # The ogr2ogr command-line, may use any output here, as long as
 # the input is a GML file. The "temp_file" is where etree-docs
 # are saved. It has to be the same file as in the ogr2ogr command.
@@ -124,7 +83,7 @@ spatial_extent = {spatial_extent}
 # gfs template
 gfs_template = gfs/imgeo-v2.1.1.gfs
 # miscellaneous ogr2ogr options
-options = -append -gt 65536 {multi_opts} --config PG_USE_COPY NO
+options = -append -gt 65536 {multi_opts}
 # cleanup input?
 cleanup_input = True
 
