Added fix for eindregistratie field in BGT...

--- a/bgt/etl/conf/etl-imgeo-v2.1.1.cfg
+++ b/bgt/etl/conf/etl-imgeo-v2.1.1.cfg
@@ -104,7 +104,7 @@ file_path = sql/drop-tables-v2.1.1.sql,sql/create-schema.sql
 # Post SQL file inputs to be executed
 [input_sql_post]
 class = inputs.fileinput.StringFileInput
-file_path = sql/create-final-tables-v2.1.1.sql
+file_path = sql/create-final-tables-v2.1.1.sql,sql/fix-eindregistratie.sql
 
 # Generic filter to substitute Python-format string values like {schema} in string
 [schema_name_filter]
