Updated config of BGT Extract to use new GfsPreparationFilter

--- a/bgt/etl/conf/etl-imgeo-v2.1.1.cfg
+++ b/bgt/etl/conf/etl-imgeo-v2.1.1.cfg
@@ -16,20 +16,8 @@
 # like imgeo-extract.py to etl.py. Here are the 3 chains:
 
 [etl]
-# Let op: dit werkt alleen op Windows. Ook moet de "xml.exe" van XMLStarlet in het pad staan!
-# The ZIP file containing the GML files is "reused" multiple times by splitting the chain. The files
-# are only extracted once. Before it is being loaded, a temporary GML file is being analyzed by
-# ogr2ogr, so the actual feature type can be determined, the number of features can be counted. With
-# this information the GFS file is being modified. When it only contains the actual feature type as
-# well as the expected number of features, loading will be much faster. Although parsing the GML
-# before by ogrinfo takes some time, the net benefit is very large, up to a factor of three during
-# tests!
 chains = input_sql_pre|schema_name_filter|output_postgres,
-         input_zip_file|extract_zip_file|(output_std)
-                                         (ogrinfo_command_generator|command_executor|ogrinfo_regex_filter|input_xsl_prep_gfs|output_xsl_prep_gfs)
-                                         (xslt_command_generator|command_executor|output_prepped_gfs)
-                                         (output_ogr2ogr)
-										 (del_temp_files_command|command_executor|output_std),
+         input_zip_file|extract_zip_file|prepare_gfs|output_ogr2ogr,
          input_dummy_zip_file|extract_dummy_zip_file|output_ogr2ogr_init,
          input_sql_post|schema_name_filter|output_postgres
 
@@ -37,64 +25,6 @@ chains = input_sql_pre|schema_name_filter|output_postgres,
 #chains = input_big_gml_files|xml_assembler|transformer_xslt|output_ogr2ogr,
 #     input_big_gml_files|xml_assembler|transformer_xslt|output_std,
 # chains=input_big_gml_files|xml_assembler|transformer_xslt|output_multifile
-
-[ogrinfo_command_generator]
-class = filters.templatingfilter.StringTemplatingFilter
-template_string = ogrinfo -ro -al -so {temp_dir}/fromzip-tmp.gml
-
-[command_executor]
-class = filters.execfilter.CommandExecFilter
-
-[ogrinfo_regex_filter]
-class = filters.regexfilter.RegexFilter
-pattern_string = .*Layer name: (\w+:)?(?P<elemtype>\w+).*Feature Count: (?P<featurecount>[0-9]+).*
-
-[input_xsl_prep_gfs]
-class = filters.templatingfilter.StringTemplatingFilter
-template_string = <?xml version="1.0" encoding="UTF-8"?>
-  <xsl:stylesheet version="1.0" xmlns:xsl="http://www.w3.org/1999/XSL/Transform">
-    <xsl:output method="xml" version="1.0" encoding="utf-8" indent="yes" omit-xml-declaration="yes"/>
-    <xsl:strip-space elements="*"/>
-    <xsl:template match="/ | @* | node()">
-        <xsl:copy>
-            <xsl:apply-templates select="@* | node()" />
-        </xsl:copy>
-    </xsl:template>
-    <xsl:template match="GMLFeatureClass">
-        <!-- Filter on particular element -->
-        <xsl:if test="ElementPath/text()='$elemtype'">
-            <xsl:copy>
-                <xsl:apply-templates select="@* | node()" />
-            </xsl:copy>
-        </xsl:if>
-    </xsl:template>
-    <xsl:template match="DatasetSpecificInfo">
-        <xsl:copy>
-            <!-- Add feature count -->
-            <FeatureCount>$featurecount</FeatureCount>
-            <xsl:apply-templates select="@* | node()" />
-        </xsl:copy>
-    </xsl:template>
-  </xsl:stylesheet>
-safe_substitution = True
-
-[output_xsl_prep_gfs]
-class = outputs.fileoutput.FileOutput
-file_path = {temp_dir}/imgeo-prep-gfs.xsl
-
-# TODO: python script maken die XSLT en XML accepteert en output teruggeeft
-[xslt_command_generator]
-class = filters.templatingfilter.StringTemplatingFilter
-template_string = xml tr {temp_dir}/imgeo-prep-gfs.xsl gfs/imgeo-v2.1.1.gfs
-
-[output_prepped_gfs]
-class = outputs.fileoutput.FileOutput
-file_path = {temp_dir}/prepped.gfs
-
-# TODO: python script?
-[del_temp_files_command]
-class = filters.templatingfilter.StringTemplatingFilter
-template_string = cleanup.cmd
 
 # Pre SQL file inputs to be executed
 [input_sql_pre]
@@ -138,6 +68,11 @@ class=filters.zipfileextractor.ZipFileExtractor
 file_path = {temp_dir}/fromzip-tmp.gml
 delete_file = False
 
+# Prepare the generic GFS file to optimize the loading speed
+[prepare_gfs]
+class = filters.gfspreparationfilter.GfsPreparationFilter
+input_gfs = gfs/imgeo-v2.1.1.gfs
+
 # The ogr2ogr command-line, may use any output here, as long as
 # the input is a GML file. The "temp_file" is where etree-docs
 # are saved. It has to be the same file as in the ogr2ogr command.
@@ -152,8 +87,8 @@ dest_data_source = "PG:dbname={database} host={host} port={port} user={user} pas
 lco = -lco LAUNDER=YES -lco PRECISION=NO
 # spatial_extent, translates to -spat xmin ymin xmax ymax
 spatial_extent = {spatial_extent}
-# gfs template
-gfs_template = {temp_dir}/prepped.gfs
+# gfs template: not needed, since this is being taken care of by the GfsPreparationFilter
+#gfs_template = {temp_dir}/prepped.gfs
 # miscellaneous ogr2ogr options
 options = -append -gt 65536 {multi_opts}
 # cleanup input?
@@ -200,4 +135,3 @@ file_path = test/output/imgeo-fc.gml
 [output_multifile]
 class = outputs.fileoutput.MultiFileOutput
 file_path = test/output/imgeo-%03d.gml
-
