Moved GFS preparation filter to subdir stetlcomponents in BGT-extract

--- a/bgt/etl/conf/etl-imgeo-v2.1.1.cfg
+++ b/bgt/etl/conf/etl-imgeo-v2.1.1.cfg
@@ -70,7 +70,7 @@ delete_file = False
 
 # Prepare the generic GFS file to optimize the loading speed
 [prepare_gfs]
-class = filters.gfspreparationfilter.GfsPreparationFilter
+class = stetlcomponents.gfspreparationfilter.GfsPreparationFilter
 input_gfs = gfs/imgeo-v2.1.1.gfs
 
 # The ogr2ogr command-line, may use any output here, as long as
