Various improvements to Top250Extract, so XSLT transformation can be omitted

--- a/brt/top250nl/etl/conf/etl-top250nl-v1.2.1.cfg
+++ b/brt/top250nl/etl/conf/etl-top250nl-v1.2.1.cfg
@@ -8,11 +8,7 @@
 # - Main ETL chain, consists of the following components
 # 1. input_zip_file: reads files from input ZIP file(s)
 # 2. extract_zip_file: extracts a GML file from a ZIP file
-# 3. parse_gml_file: parses elements from a GML file
-# 4. xml_assembler: assemble feature elements into smaller (etree) docs
-# 5. transformer_xslt: transform each (etree) doc
-# 6. packet_writer: writes the transformed GML document to a file
-# 7. output_ogr2ogr: output using ogr2ogr, input is a transformed GML file, output can be any OGR output
+# 3. output_ogr2ogr: output using ogr2ogr, input is a transformed GML file, output can be any OGR output
 # - SQL post:  remove duplicates
 #
 # Any substitutable values are specified in curly brackets e.g. {password}.
@@ -21,7 +17,7 @@
 
 [etl]
 chains = input_sql_pre|schema_name_filter|output_postgres,
-         input_zip_file|extract_zip_file|parse_gml_file|xml_assembler|transformer_xslt|packet_writer|output_ogr2ogr,
+         input_zip_file|extract_zip_file|output_ogr2ogr,
          input_sql_post|schema_name_filter|output_postgres
 
 # Pre SQL file inputs to be executed
@@ -32,7 +28,7 @@ file_path = sql/drop-tables-v1.2.1.sql,sql/create-schema.sql
 # Post SQL file inputs to be executed
 [input_sql_post]
 class = inputs.fileinput.StringFileInput
-file_path = sql/delete-duplicates-v1.2.1.sql,sql/update-multiattributes-v1.2.1.sql
+file_path = sql/update-geoms-v1.2.1.sql
 
 # Generic filter to substitute Python-format string values like {schema} in string
 [schema_name_filter]
@@ -61,36 +57,6 @@ name_filter=*.[gG][mM][lL]
 class=filters.zipfileextractor.ZipFileExtractor
 file_path = {temp_dir}/fromzip-tmp.gml
 
-# The source input file producing cityObjectMember elements
-[parse_gml_file]
-class = filters.xmlelementreader.XmlElementReader
-element_tags = FeatureMember
-
-# Assembles etree docs gml:featureMember elements, each with "max_elements" elements
-[xml_assembler]
-class = filters.xmlassembler.XmlAssembler
-max_elements = {max_features}
-container_doc = <?xml version="1.0" encoding="UTF-8"?>
-   <top250nl:FeatureCollectionT250NL
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xmlns:top250nl="http://register.geostandaarden.nl/gmlapplicatieschema/top250nl/1.2.1"
-	xmlns:brt="http://register.geostandaarden.nl/gmlapplicatieschema/brt-algemeen/1.2.0"
-    xmlns:gml="http://www.opengis.net/gml/3.2"
-    xsi:schemaLocation="http://register.geostandaarden.nl/gmlapplicatieschema/top250nl/1.2.1 top250nl.xsd"
-	gml:id="Top250NL_FC">
-    </top250nl:FeatureCollectionT250NL>
-element_container_tag = FeatureCollectionT250NL
-
-# Transforms into simple/flat feature data (single geometry per feature type, single attrs)
-[transformer_xslt]
-class = filters.xsltfilter.XsltFilter
-script = xsl/top250-split_v1.2.1.xsl
-
-# Writes the payload of a packet as a string to a file
-[packet_writer]
-class = filters.packetwriter.PacketWriter
-file_path = {temp_dir}/top250-tmp.gml
-
 # The ogr2ogr command-line, may use any output here, as long as
 # the input is a GML file. The "temp_file" is where etree-docs
 # are saved. It has to be the same file as in the ogr2ogr command.
@@ -108,7 +74,7 @@ spatial_extent = {spatial_extent}
 # gfs template
 gfs_template = gfs/top250-v1.2.1.gfs
 # miscellaneous ogr2ogr options
-options = -append -gt 65536 {multi_opts} --config PG_USE_COPY NO
+options = -append -gt 65536 {multi_opts}
 # cleanup input?
 cleanup_input = True
 
